--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,98 @@ a{
   align-items: center;
 }
 #aetiketi{
-  width: 800%;
+ padding: 0.30%;
+  background-color: pink;
+  display: flex;
+  align-items: center;
+  font-size: 150%;
+  color: black;
+
+}
+#aetiketi2{
+  padding: 0.30%;
+  background-color: pink;
+  display: flex;
+  align-items: center;
+  font-size: 150%;
+  color: black;
+
+}
+
+
+#aetiketi3{
+  padding: 0.30%;
+  background-color: pink;
+  display: flex;
+  align-items: center;
+  font-size: 150%;
+  color: black;
+
+}
+
+footer {
+  display: flex; /* Flexbox ile yan yana hizalama sağlar */
+  align-items: center; /* Dikeyde ortalamak için */
+}
+#haltı{
+  font-size: 180%;
+}
+
+.slider {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.slider img {
+  width: 100%;
+  display: block;
+}
+
+.dots {
+  text-align: center;
+  padding: 10px;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}
+
+.dot.active {
+  background-color: #717171;
+}
+
+.container{
+  display: grid;
+  grid-template-rows: 80px auto 1fr auto 50px;
+  grid-auto-columns: 1fr 4fr 1fr;
+  height: 100vh;
+grid-template-areas:
+"header       header         header"
+"left-aside   banner  right-aside"
+"left-aside    main   right-aside"
+"left-aside    low-content   right-aside"
+"footer     footer      footer";
+
+  grid-gap: 10px; padding:10px;
+  font-weight: 600; font-size: 20px;
+}
+
+@media (max-width: 678px) {
+  .container{
+    grid-template-rows: 50px 50px 50px 1fr
+  50px 50px 50px;
+    grid-template-columns:1fr ;
+    grid-template-areas: "header""banner""left-aside""main""right-aside""low-content""footer";
+
+  }
 
 }
