--- a/src/App.css
+++ b/src/App.css
@@ -169,3 +169,26 @@ grid-template-areas:
   }
 
 }
+/* styles.css */
+#buttonhover1 {
+  background-color: white;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#buttonhover1:hover {
+  background-color: lightpink;
+}
+
+
+
+.App {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #f8bbd0; /* Pastel pembe arka plan */
+  overflow: hidden;
+}
