--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,17 +1,8 @@
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #eccef3;
-}
-
 
 .login-container {
     width: 400px;
+    height:40%;
     padding: 40px;
     border-radius: 8px;
     background-color: #ffffff;
@@ -38,7 +29,7 @@ body {
 }
 
 .input-field:focus {
-    border-color: #007bff;
+    border-color: deeppink;
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
 }
 
@@ -47,7 +38,7 @@ body {
     padding: 12px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: deeppink;
     color: #ffffff;
     font-size: 16px;
     cursor: pointer;
@@ -55,7 +46,7 @@ body {
 }
 
 .login-button:hover {
-    background-color: #0056b3;
+    background-color: #f192c5;
 }
 
 
@@ -65,10 +56,13 @@ body {
 
 .help-links a {
     font-size: 14px;
-    color: #007bff;
+    color: #f854ad;
     text-decoration: none;
 }
 
 .help-links a:hover {
     text-decoration: underline;
+}
+alert{
+
 }
