--- a/src/css/login.css
+++ b/src/css/login.css
@@ -38,8 +38,9 @@
     padding: 12px;
     border: none;
     border-radius: 4px;
-    background-color: deeppink;
-    color: #ffffff;
+ background-color: deeppink;
+   color: #ffffff;
+
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -64,5 +65,5 @@
     text-decoration: underline;
 }
 alert{
-
+background-color: pink;
 }
